# capo

./: .gitignore  AGENTS.md  CHEATSHEET.md  CLAUDE.md  DEVELOPER_GUIDE.md  DEVELOPMENT_GUIDELINE.md  README.md  graph.html  pyproject.toml
.claude/: settings.json
capo/: __init__.py  api.py  campaign.py  config.py  errors.py  graph.py  main.py  state.py
capo/cli/: __init__.py  brute.py  cheatsheet.py  daemon_cmds.py  enumerate_cmds.py  exploit_cmds.py  found.py  helpers.py  kerberos_cmds.py  methodology_cmds.py  mode_cmds.py  nxc.py  report.py  scan.py  session_cmds.py  state_cmds.py  studio_cmds.py  target.py  triggers_cmds.py  web.py  writeup_cmds.py
capo/core_cheatsheets/: active_directory.yaml  impacket.yaml  password_cracking.yaml  pivoting.yaml  powerview.yaml  privesc_linux.yaml  privesc_windows.yaml  recon_network.yaml  recon_web.yaml  services.yaml  shells_transfer.yaml  smb.yaml  web_attacks.yaml  writeup_techniques.yaml
capo/core_enumerate/: registry.yaml
capo/core_exploit/: registry.yaml
capo/core_methodologies/: ad_adcs_chain.yaml  ad_kill_chain.yaml  initial_enumeration.yaml  linux_privesc.yaml  linux_web_to_root.yaml  web_app.yaml  (+1 more)
frontend/: index.html
tests/: conftest.py  test_brute.py  test_campaign.py  test_cheatsheet.py  test_cli.py  test_daemon.py  test_enumerate.py  test_git_exposure.py  test_methodology.py  test_mode.py  test_parsers.py  test_session_db.py  test_state.py  test_state_locking.py  test_suggestion_rules.py  test_triggers.py  test_web_subdns.py  test_writeup_parser.py
tutorials/: active_directory_workflow.md
(+48 files in other folders)
